CREATE TABLE Branch (
                        BranchId NUMBER GENERATED by default on null as IDENTITY,
                        Address VARCHAR2(50) NOT NULL,
                        PRIMARY KEY(BranchId)
);

CREATE TABLE Product (
                         ProductId NUMBER GENERATED by default on null as IDENTITY,
                         Name VARCHAR2(50) NOT NULL,
                         Price NUMBER NOT NULL,
                         PRIMARY KEY(ProductId)
);

CREATE TABLE Customer (
                          CustomerId NUMBER GENERATED by default on null as IDENTITY,
                          Name VARCHAR2(50) NOT NULL,
                          Address VARCHAR2(50) NOT NULL,
                          PRIMARY KEY(CustomerId)
);

CREATE TABLE Employee (
                          EmployeeId NUMBER GENERATED by default on null as IDENTITY,
                          BranchId NUMBER NOT NULL,
                          Name VARCHAR2(50) NOT NULL,
                          Wage Number NOT NULL,
                          Position VARCHAR2(50) NOT NULL,
                          PRIMARY KEY(EmployeeId),
                          FOREIGN KEY(BranchId) REFERENCES Branch(BranchId)
);

CREATE TABLE Bill (
                      BillId NUMBER GENERATED by default on null as IDENTITY,
                      EmployeeId NUMBER NOT NULL,
                      BranchId NUMBER NOT NULL,
                      CustomerId NUMBER NOT NULL,
                      DateOfIssue DATE NOT NULL,
                      PRIMARY KEY(BillId),
                      FOREIGN KEY(EmployeeId) REFERENCES Employee(EmployeeId),
                      FOREIGN KEY(BranchId) REFERENCES Branch(BranchId),
                      FOREIGN KEY(CustomerId) REFERENCES Customer(CustomerId)
);

CREATE TABLE BillRow (
                         BillId NUMBER NOT NULL,
                         ProductId NUMBER NOT NULL,
                         Amount NUMBER NOT NULL,
                         PRIMARY KEY(BillId, ProductId)
);

CREATE TABLE ProductSupply (
                               BranchId NUMBER NOT NULL,
                               ProductId NUMBER NOT NULL,
                               Amount NUMBER NOT NULL,
                               PRIMARY KEY(BranchId, ProductId)
);